@@ -1,6 +1,7 @@
 master
 - Mayhem
   Divide the Delete Link in the Menu into a Post and Image deletion links.
+  The Delete Links in the Menu now have a cooldown.
 
 2.34.1
 - Mayhem
